# factorization

./: .dockerignore  .gitignore  CMakeLists.txt  LICENSE  README.md  docker-compose.yml  makefile
src/: main.cpp
src/core/contracts/: i_prime_numbers_provider.h  i_queue.h
src/core/models/: factorized_number.h
src/docker/: Dockerfile
src/helpers/: cores.h
src/infrastructure/: app_config.cpp  app_config.h
src/libs/: bit_array.cpp  bit_array.h  bit_sieve.cpp  bit_sieve.h  concurrent_queue.h
src/workers/: bit_sieve.h  defs.h  factorizer.cpp  factorizer.h  notifiers.h  prime_numbers_provider.cpp  prime_numbers_provider.h  result_performer.cpp  result_performer.h  udp_receiver.cpp  udp_receiver.h
tests/: CMakeLists.txt
tests/libs/: bit_array_test.cpp  test_concurrent_queue.cpp
tests/workers/: bit_sieve_test.cpp  factorizer_test.cpp  prime_numbers_provider_test.cpp  result_performer_test.cpp  udp_receiver_test.cpp
udp-sender/: Dockerfile  sender.py
